--- a/style.css
+++ b/style.css
@@ -1,1 +1,63 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@font-face {
+    font-family: 'idroid';
+    src: url(fonts/idroid.otf);
+}
+
+:root {
+    --cor0: #f7f3c7;
+    --cor1: #67D37F;
+    --cor2: #57B16A;
+    --cor3: #6CDB84;
+    --cor4: #468F56;
+    --cor5: #356D41;
+    --cor6: #254B2D;
+
+    --fonte1: 'Bebas Neue', cursive;
+    --fonte2: 'idroid', cursive;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    height: 100vh;
+    font: normal 1em Arial, Helvetica, sans-serif;
+    background-color: var(--cor1);
+    color: black;
+}
+
+header {
+    text-align: center;
+    padding: 1.5em 0;
+    background-image: linear-gradient(to bottom, var(--cor3),var(--cor4), var(--cor5), var(--cor6))
+}
+
+header h1 {
+    font: bold 3em var(--fonte1);
+    color: var(--cor0);
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.493);
+}
+
+nav {
+    background-color: var(--cor6);
+    padding-left: 1em;
+    padding-bottom: 1em;
+}
+
+nav a {
+    margin: 0 1em;
+    text-decoration: none;
+    font-weight: bold;
+    font-size: 16px;
+    color: white
+}
+
+nav a:hover {
+    color: var(--cor3);
+    transition: .3s;
+}
