--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@ header h1 {
     text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.493);
 }
 
+header p {
+    font-weight: bold;
+}
+
 nav {
     background-color: var(--cor6);
     padding-left: 1em;
